kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-platform-ingress
  namespace: devops-platform
  labels:
    app.kubernetes.io/name: devops-platform-ingress
spec:
  rules:

  - host: devops.local
    http:
      paths:

      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: auth-service-service
            port: 
              number: 8000

      - pathType: Prefix
        path: "/users"
        backend:
          service:
            name: user-service-service
            port: 
              number: 8001

      - pathType: Prefix
        path: "/orders"
        backend:
          service:
            name: order-service-service
            port: 
              number: 8002
